Fix bg image jumps on mobile scroll v2.5

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,7 +31,6 @@ body{
   padding: 0;
 }
 .body-bg {
-  display: block;
   position: absolute;
   width: 100%;
   height: 100%;
